# newsletter_generator

./: .gitignore  README.md  articles.ipynb  fetch_articles.ipynb  main.py  pyproject.toml
scripts/: create_report.py  inject_urls.py  update_report_with_new_urls.py
src/summariser/: __init__.py  app.py  config.py  incremental.py  ingest.py  reporting.py  utils.py  vectordb_client.py
src/summariser/urls/: __init__.py  admin.py  chat.py
